--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
 
 overlay_generator/overlay_generator.zip
+front-end/src/node_modules/
