--- a/front-end/docker-compose.yml
+++ b/front-end/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./src:/src
-    working_dir: /src
+      - ./src:/app/src
+    working_dir: /app
