feat: adding xray layer

--- a/lowerthird_genirator/Dockerfile
+++ b/lowerthird_genirator/Dockerfile
@@ -1,6 +1,6 @@
 FROM public.ecr.aws/lambda/python:3.9
 
-RUN python -m pip install pillow awslambdaric boto3
+RUN python -m pip install pillow awslambdaric boto3 aws_xray_sdk
 
 COPY ./lambda_function.py /lambda_function.py
 
