--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,22 +7,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.18.x]
+        function: [get_current_overlay, get_overlay, lowerthird_generator, put_current_overlay]
     steps:
       - name: checkout source code
         uses: actions/checkout@v1
       - name: Install Go
         uses: actions/setup-go@v1
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: 1.18.x 
       - name: Build binary
         run: |
-          cd get_current_overlay && CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -v -a -o get_current_overlay get_current_overlay.go && zip deployment.zip get_current_overlay
+          cd ${{ matrix.function }} && CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -v -a -o ${{ matrix.function }} ${{ matrix.function }}.go && zip deployment.zip ${{ matrix.function }}
       - name: default deploy
         uses: appleboy/lambda-action@master
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ secrets.AWS_REGION }}
-          function_name: get_current_overlay
-          zip_file: get_current_overlay/deployment.zip
+          function_name: ${{ matrix.function }}
+          zip_file: ${{ matrix.function }}/deployment.zip
